<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.12">
  <POU Name="F_SAFETY_StatusFB_TO_TOF" Id="{884b2e69-8196-4dd6-9c06-72c4c25a3927}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION F_SAFETY_StatusFB_TO_TOF : ST_SAFETY_FBTOF
VAR_INPUT
	stFBStatus						: ST_SAFETY_FBStatus; 	(* Struktura ogolna *)
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[F_SAFETY_StatusFB_TO_TOF.uStatus.stStatusWords 		:= stFBStatus;									(* Przepisanie *)
F_SAFETY_StatusFB_TO_TOF.eState					 	:= stFBStatus.BState;							(* Ustawienie enum *)]]></ST>
    </Implementation>
    <LineIds Name="F_SAFETY_StatusFB_TO_TOF">
      <LineId Id="3" Count="0" />
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>